tests/rosetta/out/Fortran/anonymous-recursion-2.error
gfortran: exit status 1
/tmp/anonymous-recursion-2.f90:13:3:

   13 |   main()
      |   1
Error: Unclassifiable statement at (1)
