tests/rosetta/out/Fortran/anonymous-recursion-2.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:39Z
program anonymous_recursion_2
  implicit none
    integer :: a
    integer :: b
    integer :: i
      integer :: t
    integer, dimension(12) :: arr0 = (/-1,0,1,2,3,4,5,6,7,8,9,10/)
    integer :: i0
        character(len=100) :: s1
        character(len=100) :: s2
        character(len=100) :: s3
  main()
  contains
  recursive integer function fib(n) result(res)
    integer, intent(in) :: n
    if ((n < 2)) then
      res = n
      return
    end if
    a = 0
    b = 1
    i = 1
    do while ((i < n))
      t = (a + b)
      a = b
      b = t
      i = (i + 1)
    end do
    res = b
    return
  end function fib
  recursive integer function main() result(res)
    do i0 = 1, 12
      i = arr0(i0)
      if ((i < 0)) then
        write(s1,'(G0)') i
        print *, trim('fib(' // s1) // ') returned error: negative n is forbidden'
      else
        write(s2,'(G0)') i
        write(s3,'(G0)') fib(i)
        print *, trim(trim('fib(' // s2) // ') = ') // s3
      end if
    end do
  end function main
end program anonymous_recursion_2
